--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -1092,6 +1092,230 @@
             <button class="acc lesson lesson--testUnit0">小考试</button>
           </a>
         </div>
+        <div class="container">
+          <button class="acc lesson lesson--nominative">Mianownik / 一格</button>
+          <div class="panel">
+            <h2>Mianownik / 一格</h2>
+            <p>一格是波兰语语法格中第一个语法格。波兰语叫<i>mianownik</i>。
+              你学习新名词时，名词词形一般是一格。因此，可能对你是最简单的语法格。<br>
+              例如，波兰语“房子”或者“家”是<i>dom</i>。一格也是<i>dom</i>。<br>
+                狗 = <i>pies</i>. 一格也是<i>pies</i>. <br>
+                三明治 = <i>kanapka</i>. 一格也是<i>kanapka</i>. <br>
+                等等
+            </p>
+            <p>根据语法格而变的词类比较多，包括名词，代词，数字与形容词。让下面解释清楚一些我们今天会注意到名词。
+            </p>
+            <h3>你怎么应该用一格呢?</h3>
+            <p>局子里主语一般是一格：</p>
+            <ul class="nominative">
+              <li><i><u>Pies</u> jest <span lang="pl">głodny</span>.</i> – – <u>狗</u>饿了。</li>
+              <li><i>Moja <u>szkoła</u> jest daleko.</i> – 我的<u>学校</u>（离这里）很远。（代词 moja 也是一格）</li>
+              <li><i>Mój <u>komputer</u> nie <span lang="pl">działa</span>.</i> – 我的电脑开不了。 （代词mój 也是一格）</li>
+              <li<i>Ten <u>telefon</u> nie jest <span lang="pl">mój</span>.</i> – 这个手机不是我的。 （代词ten 也是一格)</li>
+                <li><i><u>Kasia</u> idzie do <span lang="pl">szkoły</span>.</i> – Kasia去学校。</li>
+            </ul>
+            <p>一格单词通常用在“这是“后面 – <i>to jest</i> （单数）或<i>to <span lang="pl">są</span></i> （复数）
+            </p>
+            <ul class="nominative">
+              <li><i>To jest Kasia.</i> – 这是Kasia。 </li>
+              <li><i>To jest <span lang="pl">mój</span> dom.</i> – – 这是我家</li>
+              <li><i>To jest <span lang="pl">mój</span> kolega.</i> – 这是我的朋友。</li>
+              <li><i>To <span lang="pl">są</span> moi rodzice.</i> – – 这是我的父母。 </li>
+              <li><i>To <span lang="pl">są</span> moi koledzy.</i> – 这（些）是我的朋友们。</li>
+            </ul>
+            <p>
+              你可能看到了，有时候名字也要按照语法格而变一下。 要么自我介绍，要么介绍别人，都可以用一格：
+            </p>
+            <ul class="nominative">
+              <li><i>Jestem <u>Kasia</u>.</i> – 我是Kasia。</li>
+              <li><i>Czy ty <span lang="pl">jesteś</span> <u>Kasia</u>?</i> – 你是Kasia吗？</li>
+              <li><i>To jest <u>Maria</u>.</i> – 这是Maria。</li>
+              <li><i>To <span lang="pl">są</span> moi przyjaciele, <u>Ania</u> i <u>Marek</u>.</i> – 这是我的朋友，Ania和Marek。</li>
+            </ul>
+            <p>这就是基本知识。你学会了你第一个语法格，恭喜恭喜 </p>
+            <div class="sign">
+              <p class="sign--person">编辑</p>
+              <a href="about.html" target="_blank">@Martyna</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <button class="acc lesson lesson--numerals">Numerals</button>
+          <div class="panel">
+            <h2>Numerals</h2>
+            <p>在这节课里，你会学到在波兰语中如何数数。<br>
+              首先：请先看前20个数字
+            </p>
+            <ul>
+              <li>0 – zero </li>
+              <li>1 – jeden</li>
+              <li>2 – dwa</li>
+              <li>3 – trzy </li>
+              <li>4 – cztery </li>
+              <li>5 – <span lang="pl">pięć</span></li>
+              <li>6 – <span lang="pl">sześć</span></li>
+              <li>7 – siedem</li>
+              <li>8 – osiem</li>
+              <li>9 – <span lang="pl">dziewięć</span></li>
+              <li>10 – <span lang="pl">dziesięć</span></li>
+              <li>11 – <span lang="pl">jedenaście</span></li>
+              <li>12 – <span lang="pl">dwanaście</span></li>
+              <li>13 –<span lang="pl"> trzynaście</span></li>
+              <li>14 – <span lang="pl">czternaście</li>
+              <li>15 – <span lang="pl">piętnaście</span> </li>
+              <li>16 – <span lang="pl">szesnaście</span></li>
+              <li>17 – <span lang="pl">siedemnaście</span></li>
+              <li>18 – <span lang="pl">osiemnaście</span></li>
+              <li>19 – <span lang="pl">dziewiętnaście</span></li>
+              <li>20 – <span lang="pl">dwadzieścia</span></li>
+            </ul>
+            <p>从这里开始，你可以看到数字的规律很明确也很有规律。如果你想说25，你可以简单地说20和5，可以看下面的 <span lang="pl">dwadzieścia pięć</span>.
+            </p>
+            <ul>
+              <li>21 – <span lang="pl">dwadzieścia jeden</span></li>
+              <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+              <li>23 – <span lang="pl">dwadzieścia trzy</span> </li>
+              <li>24 – <span lang="pl">dwadzieścia cztery</span></li>
+              <li>25 – <span lang="pl">dwadzieścia pięć</span></li>
+              <li>26 – <span lang="pl">dwadzieścia sześć</span></li>
+              <li>27 – <span lang="pl">dwadzieścia siedem</span></li>
+              <li>28 – <span lang="pl">dwadzieścia osiem</span></li>
+              <li>29 – <span lang="pl">dwadzieścia dziewięć</span></li>
+            </ul>
+            <ul>
+              <li>30 – <span lang="pl">trzydzieści</span></li>
+              <li>40 – <span lang="pl">czterdzieści</span></li>
+              <li>50 – <span lang="pl">pięćdziesiąt</span></li>
+              <li>60 – <span lang="pl">sześćdziesiąt</span></li>
+              <li>70 – <span lang="pl">siedemdziesiąt</span></li>
+              <li>80 – <span lang="pl">osiemdziesiąt</span> </li>
+              <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+              <li>100 – sto </li>
+            </ul>
+            <p>数字在100以上也是一样的方式，用100+10位数+个位数：</p>
+            <ul><span lang="pl">
+                <li><span class="redLetter">1</span><span class="blue">2</span><span class="green">1</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">dwadzieścia</span> <span
+                      class="green">jeden</span></li>
+                <li><span class="redLetter">1</span><span class="blue">3</span><span class="green">6</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">trzydzieści</span> <span
+                      class="green">sześć</span></li>
+                <li><span class="redLetter">1</span><span class="blue">5</span><span class="green">5</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">pięćdziesiąt</span> <span
+                      class="green">pięć</span></li>
+                <li><span class="redLetter">1</span><span class="blue">80</span> – <span class="redLetter">sto</span>
+                  <span lang="pl"><span class="blue">osiemdziesiąt</span></li>
+                <li><span class="redLetter">1</span>0<span class="green">4</span> – <span class="redLetter">sto</span>
+                  <span class="green">cztery</span></li>
+                <li><span class="redLetter">1</span><span class="green">17</span> – <span class="redLetter">sto</span>
+                  <span lang="pl"><span class="green">siedemnaście</span></li>
+              </span>
+            </ul>
+            <p>几百的数字请看下面： </p>
+            <ul>
+              <li>100 – sto</li>
+              <li>200 – <span lang="pl">dwieście</span></li>
+              <li>300 – trzysta</li>
+              <li>400 – czterysta</li>
+              <li>500 – <span lang="pl">pięćset</span></li>
+              <li>600 – <span lang="pl">sześćset</span></li>
+              <li>700 – siedemset</li>
+              <li>800 – osiemset</li>
+              <li>900 – <span lang="pl">dziewięćset</span></li>
+              </span>
+            </ul>
+            <p>几千的数字请看下面： </p>
+            <ul>
+              <li>1000 – <span lang="pl">tysiąc</span></li>
+              <li>2000 – dwa <span lang="pl">tysiące</span></li>
+              <li>3000 – trzy <span lang="pl">tysiące</span></li>
+              <li>4000 – cztery <span lang="pl">tysiące</span></li>
+              <li>5000 – <span lang="pl">pięć tysięcy</span></li>
+              <li>6000 – <span lang="pl">sześć tysięcy</span></li>
+              <li>7000 – <span lang="pl">siedem tysięcy</span></li>
+              <li>8000 – <span lang="pl">osiem tysięcy</span></li>
+              <li>9000 – <span lang="pl">dziewięć tysięcy</span></li>
+            </ul>
+            <p>
+              现在，你来试试下面的练习，看看你是否清楚地弄清楚了规则。请大声读出下面的数字并写下来：</p>
+            <ul>
+              <li>1 – ........................................................................</li>
+              <li>6 – ........................................................................</li>
+              <li>10 – ........................................................................</li>
+              <li>78 – ........................................................................</li>
+              <li>15 – ........................................................................</li>
+              <li>34 – ........................................................................</li>
+              <li>59 – ........................................................................</li>
+              <li>90 – ........................................................................</li>
+              <li>22 – ........................................................................</li>
+              <li>12 – ........................................................................</li>
+              <li>100 – ........................................................................</li>
+              <li>132 – ........................................................................</li>
+              <li>113 – ........................................................................</li>
+              <li>107 – ........................................................................</li>
+              <li>119 – ........................................................................</li>
+              <li>167 – ........................................................................</li>
+              <li>199 – ........................................................................</li>
+              <li>200 – .......................................................................</li>
+              <li>231 – .......................................................................</li>
+              <li>309 – .......................................................................</li>
+              <li>370 – .......................................................................</li>
+              <li>526 – .......................................................................</li>
+              <li>433 – .......................................................................</li>
+              <li>612 – .......................................................................</li>
+              <li>777 – .......................................................................</li>
+              <li>851 – .......................................................................</li>
+              <li>903 – .......................................................................</li>
+              <li>1020 – .......................................................................</li>
+              <li>1111 – .......................................................................</li>
+              <li>2020 – .......................................................................</li>
+            </ul>
+
+
+            <p>
+              完成后可以在课程的最后核对答案。 <br><br>
+
+              如果你需要一些发音的帮助，在youtube有很多很棒的而课程。可以搜索：用波兰语数数（counting in Polish） <br> <br>
+              <b>答案:</b>
+            </p>
+            <ul>
+              <li>1 – jeden</li>
+              <li>6 – <span lang="pl">sześć</span></li>
+              <li>10 – <span lang="pl">dziesięć</span></li>
+              <li>78 – <span lang="pl">siedemdziesiąt osiem</span></li>
+              <li>15 – <span lang="pl">piętnaście</span></li>
+              <li>34 – <span lang="pl">trzydzieści cztery</span></li>
+              <li>59 – <span lang="pl">pięćdziesiąt dziewięć</span></li>
+              <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+              <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+              <li>12 – <span lang="pl">dwanaście</span></li>
+              <li>100 – sto</li>
+              <li>132 – sto <span lang="pl">trzydzieści dwa</span></li>
+              <li>113 – sto <span lang="pl">trzynaście</span></li>
+              <li>107 – sto siedem</li>
+              <li>119 – sto <span lang="pl">dziewiętnaście</span></li>
+              <li>167 – sto <span lang="pl">sześćdziesiąt siedem</span></li>
+              <li>199 – sto <span lang="pl">dziewięćdziesiąt dziewięć</span></li>
+              <li>200 – <span lang="pl">dwieście</span></li>
+              <li>231 – <span lang="pl">dwieście trzydzieści jeden</span></li>
+              <li>309 – trzysta <span lang="pl">dziewięć</span></li>
+              <li>370 – trzysta <span lang="pl">siedemdziesiąt</span></li>
+              <li>526 – <span lang="pl">pięćset dwadzieścia</span></li>
+              <li>433 – czterysta <span lang="pl">trzydzieści trzy</span></li>
+              <li>612 – <span lang="pl">sześćset dwanaście</span></li>
+              <li>777 – siedemset <span lang="pl">siedemdziesiąt siedem</span></li>
+              <li>851 – osiemset <span lang="pl">pięćdziesiąt jeden</span></li>
+              <li>903 – <span lang="pl">dziewięćset trzy</span></li>
+              <li>1020 – <span lang="pl">tysiąc dwadzieścia</span></li>
+              <li>1111 – <span lang="pl">tysiąc sto jedenaście</span></li>
+              <li>2020 – dwa <span lang="pl">tysiące dwadzieścia</span></li>
+            </ul>
+            <div class="sign">
+              <p class="sign--person">编辑</p>
+              <a href="about.html" target="_blank">@Martyna</a>
+            </div>
+          </div>
+        </div>
 
         <!--
         <button class="accordion-4">acc lesson 2</button>
