--- a/vi/lessons.html
+++ b/vi/lessons.html
@@ -1236,6 +1236,226 @@
             <button class="acc lesson lesson--testUnit0">Bài học 0 - Kiểm tra</button>
           </a>
         </div>
+        <h2 class="unit">Unit 1</h2>
+        <div class="container">
+          <button class="acc lesson lesson--nominative">Cách ngữ pháp số 1: Mianownik</button>
+          <div class="panel">
+            <h2>Cách ngữ pháp số 1: Mianownik</h2>
+            <p>
+              Như đã đề cập đến ở các bài học trước, trong tiếng Ba Lan, các từ loại sẽ biến đổi theo 7 cách ngữ pháp. Mianownik là cách ngữ pháp số 1 trong tiếng Ba Lan, hay còn được gọi là nguyên cách – danh từ và tính từ chỉ có số ít và số nhiều đổi từ từ gốc ra.
+              <br>
+              Thông thường, các danh từ trong tiếng Ba Lan đều được cho dưới dạng Mianownik. Vì vậy, bạn cần phải nắm rõ được cách ngữ pháp này để có thể dễ dàng hơn khi học các cách ngữ pháp còn lại.
+              <br>
+              Ví dụ: Trong tiếng Ba Lan „Dom” có nghĩa là nhà, và từ này khi được chia theo Mianownik cũng vẫn sẽ là ,,Dom”.<br>
+              Pies – con chó, từ này khi chia theo Mianownik sẽ là Pies. <br>
+              Kanapka – bánh mì, từ này khi chia theo Mianownik sẽ là Kanapka.
+            </p>
+            <p>Nhắc lại kiến thức cũ, mỗi cách ngữ pháp sẽ trả lời cho một câu hỏi, và cách ngữ pháp Mianownik sẽ trả lời cho câu hỏi Kto? (ai) và Co? (cái gì). Và để bạn dễ hình dung hơn, trong bài học này chúng ta sẽ chỉ tập trung vào các danh từ khi được chia theo Mianownik.
+            </p>
+            <h3>Khi nào thì sử dụng cách ngữ pháp Mianownik?</h3>
+            <p><b>Khi từ đó đóng vai trò là chủ ngữ trong câu:</b></p>
+            <ul class="nominative">
+              <li><u>Pies</u> jest <span lang="pl">głodny</span>.<i>(Chú chó đang đói bụng)</i></li>
+              <li>Moja <u>szkoła</u> jest daleko. <i>(Trường học của tôi ở rất xa)</i>. Lưu ý: đại từ ,,Moja” cũng đã được chia theo Mianownik. </li>
+              <li><span lang="pl">Mój</span> <u>komputer</u> nie <span lang="pl">działa</span>. <i>(Máy tính của tôi không hoạt động)</i>. Lưu ý: đại từ ,,Mój” cũng đã được chia theo Mianownik.</li>
+              <li>Ten <u>telefon</u> nie jest <span lang="pl">mój</span>. <i>(Cái điện thoại này không phải của tôi). </i>). Lưu ý: đại từ ,,ten” cũng đã được chia theo Mianownik.</li>
+              <li><u>Kasia</u> idzie do <span lang="pl">szkoły</span>. <i>(Kasia đang đi đến trường).</i></li>
+            </ul>
+            <p> <b>Dùng sau “đây là”</b></p>
+            <ul class="nominative">
+              <li>To jest Kasia. <i>(Đây là Kasia)</i> </li>
+              <li>To jest <span lang="pl">mój</span> dom. <i>(Đây là nhà của tôi)</i></li>
+              <li>To jest <span lang="pl">mój</span> kolega. <i>(Đây là bạn tôi)</i> </li>
+              <li>To <span lang="pl">są</span> moi rodzice. <i>(Đây là gia đình của tôi)</i></li>
+              <li>To <span lang="pl">są</span> moi koledzy.<i>(Đây là những người bạn của tôi)</i></li>
+            </ul>
+            <p><b>Dùng khi giới thiệu về bản thân hoặc giới thiệu về người khác</b></p>
+            <p>Trong tiếng Ba Lan, tên riêng cũng sẽ thay đổi theo các cách ngữ pháp. Thông thường chúng ta sẽ sử dụng cách ngữ pháp Mianownik khi giới thiệu về mình hoặc người khác. </p>
+            <ul class="nominative">
+              <li>Jestem <u>Kasia</u>. <i>(Tôi là Kasia)</i></li>
+              <li>Czy ty <span lang="pl">jesteś</span> <u>Kasia</u>? <i>(Bạn có phải Kasia không?)</i></li>
+              <li>To jest <u>Maria</u>. <i>(Đây là Maria)</i></li>
+              <li>To <span lang="pl">są</span> moi przyjaciele, <u>Ania</u> i <u>Marek</u>. <i>(Đây là những người bạn của tôi, Ania và Marek)</i></li>
+            </ul>
+            <p>Trên đây là những kiến thức rất cơ bản về cách ngữ pháp số 1 – Mianownik. Chúng tôi mong rằng bài học „vỡ lòng” này sẽ giúp được bạn trong quá trình học tiếng Ba Lan .</p>
+            <div class="sign">
+              <p class="sign--person">Được viết bởi </p>
+              <a href="about.html" target="_blank">@Martyna</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <button class="acc lesson lesson--numerals">SỐ ĐẾM</button>
+          <div class="panel">
+            <h2>SỐ ĐẾM</h2>
+            <p>Trong bài học này chúng ta sẽ học cách đếm số trong tiếng Ba Lan.<br>
+              Trước tiên chúng ta hãy cùng khởi động với 20 chữ số đầu tiên:
+            </p>
+            <ul>
+              <li>0 – zero </li>
+              <li>1 – jeden</li>
+              <li>2 – dwa</li>
+              <li>3 – trzy </li>
+              <li>4 – cztery </li>
+              <li>5 – <span lang="pl">pięć</span></li>
+              <li>6 – <span lang="pl">sześć</span></li>
+              <li>7 – siedem</li>
+              <li>8 – osiem</li>
+              <li>9 – <span lang="pl">dziewięć</span></li>
+              <li>10 – <span lang="pl">dziesięć</span></li>
+              <li>11 – <span lang="pl">jedenaście</span></li>
+              <li>12 – <span lang="pl">dwanaście</span></li>
+              <li>13 –<span lang="pl"> trzynaście</span></li>
+              <li>14 – <span lang="pl">czternaście</li>
+              <li>15 – <span lang="pl">piętnaście</span> </li>
+              <li>16 – <span lang="pl">szesnaście</span></li>
+              <li>17 – <span lang="pl">siedemnaście</span></li>
+              <li>18 – <span lang="pl">osiemnaście</span></li>
+              <li>19 – <span lang="pl">dziewiętnaście</span></li>
+              <li>20 – <span lang="pl">dwadzieścia</span></li>
+            </ul>
+            <p>Một khi đã nắm chắc được 20 số đầu tiên trong tiếng Ba Lan, chúng ta sẽ dễ dàng đọc và nhớ được các số tiếp theo. Ví dụ, số 25 trong tiếng Ba Lan sẽ được ghép từ số 20 – <span lang="pl">dwadzieścia</span> và số 5 – <span lang="pl">pięć</span>, từ đó ta có 25 – <span
+                lang="pl">dwadzieścia pięć</span>.
+            </p>
+            <ul>
+              <li>21 – <span lang="pl">dwadzieścia jeden</span></li>
+              <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+              <li>23 – <span lang="pl">dwadzieścia trzy</span> </li>
+              <li>24 – <span lang="pl">dwadzieścia cztery</span></li>
+              <li>25 – <span lang="pl">dwadzieścia pięć</span></li>
+              <li>26 – <span lang="pl">dwadzieścia sześć</span></li>
+              <li>27 – <span lang="pl">dwadzieścia siedem</span></li>
+              <li>28 – <span lang="pl">dwadzieścia osiem</span></li>
+              <li>29 – <span lang="pl">dwadzieścia dziewięć</span></li>
+            </ul>
+            <ul>
+              <li>30 – <span lang="pl">trzydzieści</span></li>
+              <li>40 – <span lang="pl">czterdzieści</span></li>
+              <li>50 – <span lang="pl">pięćdziesiąt</span></li>
+              <li>60 – <span lang="pl">sześćdziesiąt</span></li>
+              <li>70 – <span lang="pl">siedemdziesiąt</span></li>
+              <li>80 – <span lang="pl">osiemdziesiąt</span> </li>
+              <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+              <li>100 – sto </li>
+            </ul>
+            <p>Tương tự như vậy, các số trên một trăm cũng được ghép từ 100 – sto + số đếm từ 1 đến 99. </p>
+            <ul>
+              <li><span class="redLetter">1</span><span class="blue"></span>04</span> – <span class="redLetter">sto</span>
+                <span class="blue">cztery</span></li>
+              <li><span class="redLetter">1</span><span class="blue">17</span> – <span class="redLetter">sto</span>
+                <span lang="pl"><span class="blue">siedemnaście</span></span></li>
+                <li><span class="redLetter">1</span><span class="blue">21</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">dwadzieścia jeden</span></li>
+                <li><span class="redLetter">1</span><span class="blue">36</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">trzydzieści sześć</span></li>
+                <li><span class="redLetter">1</span><span class="blue">55</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">pięćdziesiąt pięć</span></li>
+                <li><span class="redLetter">1</span><span class="blue">80</span> – <span class="redLetter">sto</span>
+                  <span lang="pl"><span class="blue">osiemdziesiąt</span></li>
+            </ul>
+            <p>Cách đếm các số hàng trăm như sau: </p>
+            <ul>
+              <li>100 – sto</li>
+              <li>200 – <span lang="pl">dwieście</span></li>
+              <li>300 – trzysta</li>
+              <li>400 – czterysta</li>
+              <li>500 – <span lang="pl">pięćset</span></li>
+              <li>600 – <span lang="pl">sześćset</span></li>
+              <li>700 – siedemset</li>
+              <li>800 – osiemset</li>
+              <li>900 – <span lang="pl">dziewięćset</span></li>
+              </span>
+            </ul>
+            <p>Tương tự, chúng ta sẽ có các số hàng nghìn bằng cách thêm <span lang="pl">tysiąc/ tysiące/ tysięcy</span> vào sau số đếm từ 1 đến 999. </p>
+            <ul>
+              <li>1000 – <span lang="pl">tysiąc</span></li>
+              <li>2000 – dwa <span lang="pl">tysiące</span></li>
+              <li>3000 – trzy <span lang="pl">tysiące</span></li>
+              <li>4000 – cztery <span lang="pl">tysiące</span></li>
+              <li>5000 – <span lang="pl">pięć tysięcy</span></li>
+              <li>6000 – <span lang="pl">sześć tysięcy</span></li>
+              <li>7000 – <span lang="pl">siedem tysięcy</span></li>
+              <li>8000 – <span lang="pl">osiem tysięcy</span></li>
+              <li>9000 – <span lang="pl">dziewięć tysięcy</span></li>
+            </ul>
+            <p>
+              Trên đây là tất cả lý thuyết về số đếm trong tiếng Ba Lan. Bây giờ, bạn hãy cố gắng ghi nhớ những số cơ bản, và luyện tập với bài tập dưới đây: </p>
+            <ul>
+              <li>1 – ........................................................................</li>
+              <li>6 – ........................................................................</li>
+              <li>10 – ........................................................................</li>
+              <li>78 – ........................................................................</li>
+              <li>15 – ........................................................................</li>
+              <li>34 – ........................................................................</li>
+              <li>59 – ........................................................................</li>
+              <li>90 – ........................................................................</li>
+              <li>22 – ........................................................................</li>
+              <li>12 – ........................................................................</li>
+              <li>100 – ........................................................................</li>
+              <li>132 – ........................................................................</li>
+              <li>113 – ........................................................................</li>
+              <li>107 – ........................................................................</li>
+              <li>119 – ........................................................................</li>
+              <li>167 – ........................................................................</li>
+              <li>199 – ........................................................................</li>
+              <li>200 – .......................................................................</li>
+              <li>231 – .......................................................................</li>
+              <li>309 – .......................................................................</li>
+              <li>370 – .......................................................................</li>
+              <li>526 – .......................................................................</li>
+              <li>433 – .......................................................................</li>
+              <li>612 – .......................................................................</li>
+              <li>777 – .......................................................................</li>
+              <li>851 – .......................................................................</li>
+              <li>903 – .......................................................................</li>
+              <li>1020 – .......................................................................</li>
+              <li>1111 – .......................................................................</li>
+              <li>2020 – .......................................................................</li>
+            </ul>
+
+
+            <p>
+              Trên đây là tất cả lý thuyết về số đếm trong tiếng Ba Lan. Bây giờ, bạn hãy cố gắng ghi nhớ những số cơ bản, và luyện tập với bài tập dưới đây: <br><br>
+              <b>Đáp án:</b>
+            </p>
+            <ul>
+              <li>1 – jeden</li>
+              <li>6 – <span lang="pl">sześć</span></li>
+              <li>10 – <span lang="pl">dziesięć</span></li>
+              <li>78 – <span lang="pl">siedemdziesiąt osiem</span></li>
+              <li>15 – <span lang="pl">piętnaście</span></li>
+              <li>34 – <span lang="pl">trzydzieści cztery</span></li>
+              <li>59 – <span lang="pl">pięćdziesiąt dziewięć</span></li>
+              <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+              <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+              <li>12 – <span lang="pl">dwanaście</span></li>
+              <li>100 – sto</li>
+              <li>132 – sto <span lang="pl">trzydzieści dwa</span></li>
+              <li>113 – sto <span lang="pl">trzynaście</span></li>
+              <li>107 – sto siedem</li>
+              <li>119 – sto <span lang="pl">dziewiętnaście</span></li>
+              <li>167 – sto <span lang="pl">sześćdziesiąt siedem</span></li>
+              <li>199 – sto <span lang="pl">dziewięćdziesiąt dziewięć</span></li>
+              <li>200 – <span lang="pl">dwieście</span></li>
+              <li>231 – <span lang="pl">dwieście trzydzieści jeden</span></li>
+              <li>309 – trzysta <span lang="pl">dziewięć</span></li>
+              <li>370 – trzysta <span lang="pl">siedemdziesiąt</span></li>
+              <li>526 – <span lang="pl">pięćset dwadzieścia</span></li>
+              <li>433 – czterysta <span lang="pl">trzydzieści trzy</span></li>
+              <li>612 – <span lang="pl">sześćset dwanaście</span></li>
+              <li>777 – siedemset <span lang="pl">siedemdziesiąt siedem</span></li>
+              <li>851 – osiemset <span lang="pl">pięćdziesiąt jeden</span></li>
+              <li>903 – <span lang="pl">dziewięćset trzy</span></li>
+              <li>1020 – <span lang="pl">tysiąc dwadzieścia</span></li>
+              <li>1111 – <span lang="pl">tysiąc sto jedenaście</span></li>
+              <li>2020 – dwa <span lang="pl">tysiące dwadzieścia</span></li>
+            </ul>
+            <div class="sign">
+              <p class="sign--person">Được viết bởi </p>
+              <a href="about.html" target="_blank">@Martyna</a>
+            </div>
+          </div>
+        </div>
         <!-- <button class="accordion-4">acc lesson 3</button>
         <div class="panel">
           <h2>acc lesson 3</h2><br>
