updated vietnamese and fixed lessons headlings

--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -1093,15 +1093,16 @@
           </a>
         </div>
         <div class="container">
+          <h2 class="unit" style="margin-top: 15px">第2单元</h2>
           <button class="acc lesson lesson--nominative">Mianownik / 一格</button>
           <div class="panel">
             <h2>Mianownik / 一格</h2>
             <p>一格是波兰语语法格中第一个语法格。波兰语叫<i>mianownik</i>。
               你学习新名词时，名词词形一般是一格。因此，可能对你是最简单的语法格。<br>
               例如，波兰语“房子”或者“家”是<i>dom</i>。一格也是<i>dom</i>。<br>
-                狗 = <i>pies</i>. 一格也是<i>pies</i>. <br>
-                三明治 = <i>kanapka</i>. 一格也是<i>kanapka</i>. <br>
-                等等
+              狗 = <i>pies</i>. 一格也是<i>pies</i>. <br>
+              三明治 = <i>kanapka</i>. 一格也是<i>kanapka</i>. <br>
+              等等
             </p>
             <p>根据语法格而变的词类比较多，包括名词，代词，数字与形容词。让下面解释清楚一些我们今天会注意到名词。
             </p>
@@ -1130,7 +1131,8 @@
               <li><i>Jestem <u>Kasia</u>.</i> – 我是Kasia。</li>
               <li><i>Czy ty <span lang="pl">jesteś</span> <u>Kasia</u>?</i> – 你是Kasia吗？</li>
               <li><i>To jest <u>Maria</u>.</i> – 这是Maria。</li>
-              <li><i>To <span lang="pl">są</span> moi przyjaciele, <u>Ania</u> i <u>Marek</u>.</i> – 这是我的朋友，Ania和Marek。</li>
+              <li><i>To <span lang="pl">są</span> moi przyjaciele, <u>Ania</u> i <u>Marek</u>.</i> – 这是我的朋友，Ania和Marek。
+              </li>
             </ul>
             <p>这就是基本知识。你学会了你第一个语法格，恭喜恭喜 </p>
             <div class="sign">
