--- a/vi/about.html
+++ b/vi/about.html
@@ -67,7 +67,7 @@
                                 Chúng tôi là SARO.</p>
                             <p>Chúng tôi là SARO. Với khát khao và mong muốn giúp đỡ người nước ngoài học tiếng Ba Lan
                                 cách dễ dàng hơn, chúng tôi quyết định thành lập dự án SARO.
-                                Ngôn ngữ chính của chúng tôi là Tiếng Việt. Tuy nhiên, chúng thôi cũng thêm số ngôn ngữ
+                                Ngôn ngữ chính của chúng tôi là Tiếng Anh. Tuy nhiên, chúng thôi cũng thêm số ngôn ngữ
                                 khác như tiếng Nhật và tiếng Hàn, tiếng Việt.
                                 Tên gọi SARO được bắt nguồn từ cái tên "Saki" trong tiếng Nhật 沙季 và "Robert" trong
                                 tiếng Ba Lan. Saki và Robert là cặp đôi Nhật - Ba Lan với mong muốn được chia sẻ kiến
