--- a/vi/lessons.html
+++ b/vi/lessons.html
@@ -1236,29 +1236,38 @@
             <button class="acc lesson lesson--testUnit0">Bài học 0 - Kiểm tra</button>
           </a>
         </div>
-        <h2 class="unit">Unit 1</h2>
+        <h2 class="unit" style="margin-top: 15px;">Bài học 1</h2>
         <div class="container">
           <button class="acc lesson lesson--nominative">Cách ngữ pháp số 1: Mianownik</button>
           <div class="panel">
             <h2>Cách ngữ pháp số 1: Mianownik</h2>
             <p>
-              Như đã đề cập đến ở các bài học trước, trong tiếng Ba Lan, các từ loại sẽ biến đổi theo 7 cách ngữ pháp. Mianownik là cách ngữ pháp số 1 trong tiếng Ba Lan, hay còn được gọi là nguyên cách – danh từ và tính từ chỉ có số ít và số nhiều đổi từ từ gốc ra.
+              Như đã đề cập đến ở các bài học trước, trong tiếng Ba Lan, các từ loại sẽ biến đổi theo 7 cách ngữ pháp.
+              Mianownik là cách ngữ pháp số 1 trong tiếng Ba Lan, hay còn được gọi là nguyên cách – danh từ và tính từ
+              chỉ có số ít và số nhiều đổi từ từ gốc ra.
               <br>
-              Thông thường, các danh từ trong tiếng Ba Lan đều được cho dưới dạng Mianownik. Vì vậy, bạn cần phải nắm rõ được cách ngữ pháp này để có thể dễ dàng hơn khi học các cách ngữ pháp còn lại.
+              Thông thường, các danh từ trong tiếng Ba Lan đều được cho dưới dạng Mianownik. Vì vậy, bạn cần phải nắm rõ
+              được cách ngữ pháp này để có thể dễ dàng hơn khi học các cách ngữ pháp còn lại.
               <br>
-              Ví dụ: Trong tiếng Ba Lan „Dom” có nghĩa là nhà, và từ này khi được chia theo Mianownik cũng vẫn sẽ là ,,Dom”.<br>
+              Ví dụ: Trong tiếng Ba Lan „Dom” có nghĩa là nhà, và từ này khi được chia theo Mianownik cũng vẫn sẽ là
+              ,,Dom”.<br>
               Pies – con chó, từ này khi chia theo Mianownik sẽ là Pies. <br>
               Kanapka – bánh mì, từ này khi chia theo Mianownik sẽ là Kanapka.
             </p>
-            <p>Nhắc lại kiến thức cũ, mỗi cách ngữ pháp sẽ trả lời cho một câu hỏi, và cách ngữ pháp Mianownik sẽ trả lời cho câu hỏi Kto? (ai) và Co? (cái gì). Và để bạn dễ hình dung hơn, trong bài học này chúng ta sẽ chỉ tập trung vào các danh từ khi được chia theo Mianownik.
+            <p>Nhắc lại kiến thức cũ, mỗi cách ngữ pháp sẽ trả lời cho một câu hỏi, và cách ngữ pháp Mianownik sẽ trả
+              lời cho câu hỏi Kto? (ai) và Co? (cái gì). Và để bạn dễ hình dung hơn, trong bài học này chúng ta sẽ chỉ
+              tập trung vào các danh từ khi được chia theo Mianownik.
             </p>
             <h3>Khi nào thì sử dụng cách ngữ pháp Mianownik?</h3>
             <p><b>Khi từ đó đóng vai trò là chủ ngữ trong câu:</b></p>
             <ul class="nominative">
               <li><u>Pies</u> jest <span lang="pl">głodny</span>.<i>(Chú chó đang đói bụng)</i></li>
-              <li>Moja <u>szkoła</u> jest daleko. <i>(Trường học của tôi ở rất xa)</i>. Lưu ý: đại từ ,,Moja” cũng đã được chia theo Mianownik. </li>
-              <li><span lang="pl">Mój</span> <u>komputer</u> nie <span lang="pl">działa</span>. <i>(Máy tính của tôi không hoạt động)</i>. Lưu ý: đại từ ,,Mój” cũng đã được chia theo Mianownik.</li>
-              <li>Ten <u>telefon</u> nie jest <span lang="pl">mój</span>. <i>(Cái điện thoại này không phải của tôi). </i>). Lưu ý: đại từ ,,ten” cũng đã được chia theo Mianownik.</li>
+              <li>Moja <u>szkoła</u> jest daleko. <i>(Trường học của tôi ở rất xa)</i>. Lưu ý: đại từ ,,Moja” cũng đã
+                được chia theo Mianownik. </li>
+              <li><span lang="pl">Mój</span> <u>komputer</u> nie <span lang="pl">działa</span>. <i>(Máy tính của tôi
+                  không hoạt động)</i>. Lưu ý: đại từ ,,Mój” cũng đã được chia theo Mianownik.</li>
+              <li>Ten <u>telefon</u> nie jest <span lang="pl">mój</span>. <i>(Cái điện thoại này không phải của tôi).
+                </i>). Lưu ý: đại từ ,,ten” cũng đã được chia theo Mianownik.</li>
               <li><u>Kasia</u> idzie do <span lang="pl">szkoły</span>. <i>(Kasia đang đi đến trường).</i></li>
             </ul>
             <p> <b>Dùng sau “đây là”</b></p>
@@ -1270,14 +1279,17 @@
               <li>To <span lang="pl">są</span> moi koledzy.<i>(Đây là những người bạn của tôi)</i></li>
             </ul>
             <p><b>Dùng khi giới thiệu về bản thân hoặc giới thiệu về người khác</b></p>
-            <p>Trong tiếng Ba Lan, tên riêng cũng sẽ thay đổi theo các cách ngữ pháp. Thông thường chúng ta sẽ sử dụng cách ngữ pháp Mianownik khi giới thiệu về mình hoặc người khác. </p>
+            <p>Trong tiếng Ba Lan, tên riêng cũng sẽ thay đổi theo các cách ngữ pháp. Thông thường chúng ta sẽ sử dụng
+              cách ngữ pháp Mianownik khi giới thiệu về mình hoặc người khác. </p>
             <ul class="nominative">
               <li>Jestem <u>Kasia</u>. <i>(Tôi là Kasia)</i></li>
               <li>Czy ty <span lang="pl">jesteś</span> <u>Kasia</u>? <i>(Bạn có phải Kasia không?)</i></li>
               <li>To jest <u>Maria</u>. <i>(Đây là Maria)</i></li>
-              <li>To <span lang="pl">są</span> moi przyjaciele, <u>Ania</u> i <u>Marek</u>. <i>(Đây là những người bạn của tôi, Ania và Marek)</i></li>
+              <li>To <span lang="pl">są</span> moi przyjaciele, <u>Ania</u> i <u>Marek</u>. <i>(Đây là những người bạn
+                  của tôi, Ania và Marek)</i></li>
             </ul>
-            <p>Trên đây là những kiến thức rất cơ bản về cách ngữ pháp số 1 – Mianownik. Chúng tôi mong rằng bài học „vỡ lòng” này sẽ giúp được bạn trong quá trình học tiếng Ba Lan .</p>
+            <p>Trên đây là những kiến thức rất cơ bản về cách ngữ pháp số 1 – Mianownik. Chúng tôi mong rằng bài học „vỡ
+              lòng” này sẽ giúp được bạn trong quá trình học tiếng Ba Lan .</p>
             <div class="sign">
               <p class="sign--person">Được viết bởi </p>
               <a href="about.html" target="_blank">@Martyna</a>
@@ -1314,8 +1326,9 @@
               <li>19 – <span lang="pl">dziewiętnaście</span></li>
               <li>20 – <span lang="pl">dwadzieścia</span></li>
             </ul>
-            <p>Một khi đã nắm chắc được 20 số đầu tiên trong tiếng Ba Lan, chúng ta sẽ dễ dàng đọc và nhớ được các số tiếp theo. Ví dụ, số 25 trong tiếng Ba Lan sẽ được ghép từ số 20 – <span lang="pl">dwadzieścia</span> và số 5 – <span lang="pl">pięć</span>, từ đó ta có 25 – <span
-                lang="pl">dwadzieścia pięć</span>.
+            <p>Một khi đã nắm chắc được 20 số đầu tiên trong tiếng Ba Lan, chúng ta sẽ dễ dàng đọc và nhớ được các số
+              tiếp theo. Ví dụ, số 25 trong tiếng Ba Lan sẽ được ghép từ số 20 – <span lang="pl">dwadzieścia</span> và
+              số 5 – <span lang="pl">pięć</span>, từ đó ta có 25 – <span lang="pl">dwadzieścia pięć</span>.
             </p>
             <ul>
               <li>21 – <span lang="pl">dwadzieścia jeden</span></li>
@@ -1340,18 +1353,19 @@
             </ul>
             <p>Tương tự như vậy, các số trên một trăm cũng được ghép từ 100 – sto + số đếm từ 1 đến 99. </p>
             <ul>
-              <li><span class="redLetter">1</span><span class="blue"></span>04</span> – <span class="redLetter">sto</span>
+              <li><span class="redLetter">1</span><span class="blue"></span>04</span> – <span
+                  class="redLetter">sto</span>
                 <span class="blue">cztery</span></li>
               <li><span class="redLetter">1</span><span class="blue">17</span> – <span class="redLetter">sto</span>
                 <span lang="pl"><span class="blue">siedemnaście</span></span></li>
-                <li><span class="redLetter">1</span><span class="blue">21</span> – <span
-                    class="redLetter">sto</span> <span lang="pl"><span class="blue">dwadzieścia jeden</span></li>
-                <li><span class="redLetter">1</span><span class="blue">36</span> – <span
-                    class="redLetter">sto</span> <span lang="pl"><span class="blue">trzydzieści sześć</span></li>
-                <li><span class="redLetter">1</span><span class="blue">55</span> – <span
-                    class="redLetter">sto</span> <span lang="pl"><span class="blue">pięćdziesiąt pięć</span></li>
-                <li><span class="redLetter">1</span><span class="blue">80</span> – <span class="redLetter">sto</span>
-                  <span lang="pl"><span class="blue">osiemdziesiąt</span></li>
+              <li><span class="redLetter">1</span><span class="blue">21</span> – <span class="redLetter">sto</span>
+                <span lang="pl"><span class="blue">dwadzieścia jeden</span></li>
+              <li><span class="redLetter">1</span><span class="blue">36</span> – <span class="redLetter">sto</span>
+                <span lang="pl"><span class="blue">trzydzieści sześć</span></li>
+              <li><span class="redLetter">1</span><span class="blue">55</span> – <span class="redLetter">sto</span>
+                <span lang="pl"><span class="blue">pięćdziesiąt pięć</span></li>
+              <li><span class="redLetter">1</span><span class="blue">80</span> – <span class="redLetter">sto</span>
+                <span lang="pl"><span class="blue">osiemdziesiąt</span></li>
             </ul>
             <p>Cách đếm các số hàng trăm như sau: </p>
             <ul>
@@ -1366,7 +1380,8 @@
               <li>900 – <span lang="pl">dziewięćset</span></li>
               </span>
             </ul>
-            <p>Tương tự, chúng ta sẽ có các số hàng nghìn bằng cách thêm <span lang="pl">tysiąc/ tysiące/ tysięcy</span> vào sau số đếm từ 1 đến 999. </p>
+            <p>Tương tự, chúng ta sẽ có các số hàng nghìn bằng cách thêm <span lang="pl">tysiąc/ tysiące/ tysięcy</span>
+              vào sau số đếm từ 1 đến 999. </p>
             <ul>
               <li>1000 – <span lang="pl">tysiąc</span></li>
               <li>2000 – dwa <span lang="pl">tysiące</span></li>
@@ -1379,7 +1394,8 @@
               <li>9000 – <span lang="pl">dziewięć tysięcy</span></li>
             </ul>
             <p>
-              Trên đây là tất cả lý thuyết về số đếm trong tiếng Ba Lan. Bây giờ, bạn hãy cố gắng ghi nhớ những số cơ bản, và luyện tập với bài tập dưới đây: </p>
+              Trên đây là tất cả lý thuyết về số đếm trong tiếng Ba Lan. Bây giờ, bạn hãy cố gắng ghi nhớ những số cơ
+              bản, và luyện tập với bài tập dưới đây: </p>
             <ul>
               <li>1 – ........................................................................</li>
               <li>6 – ........................................................................</li>
@@ -1415,7 +1431,8 @@
 
 
             <p>
-              Trên đây là tất cả lý thuyết về số đếm trong tiếng Ba Lan. Bây giờ, bạn hãy cố gắng ghi nhớ những số cơ bản, và luyện tập với bài tập dưới đây: <br><br>
+              Trên đây là tất cả lý thuyết về số đếm trong tiếng Ba Lan. Bây giờ, bạn hãy cố gắng ghi nhớ những số cơ
+              bản, và luyện tập với bài tập dưới đây: <br><br>
               <b>Đáp án:</b>
             </p>
             <ul>
