--- a/vi/test/unit0/index.html
+++ b/vi/test/unit0/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bài kiểm tra số 0 - SARO</title>
-    <link rel="stylesheet" href="../../../assets/style/css/style.css">
+    <link rel="stylesheet" href="../../../../assets/style/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -43,7 +43,7 @@
             </div>
         </div>
     </section>
-    <script src="../../../assets/js/testUnit0.js"></script>
+    <script type="module" src="../../../../assets/js/testUnit0.js"></script>
 </body>
 
 </html>
