--- a/vi/stuff/games/hangman/index.html
+++ b/vi/stuff/games/hangman/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
-    <title>SARO - Trò chơi đoán từ 1.0.0</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../../../assets/style/css/style.css">
+  <link
+    href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
+  <title>SARO - Trò chơi đoán từ 1.0.0</title>
 </head>
+
 <body>
   <header>
     <button onclick="goBack()" class="back">⮨ Quay lại</button>
@@ -16,29 +18,30 @@
   </header>
   <script>
     function goBack() {
-        window.history.back();
+      window.history.back();
     }
-</script>
+  </script>
   <section>
     <div class="wrapper">
-        <h1>Đoán từ</h1> <img src="./../../../assets/img/embl/study.png" alt="Hangman Study" class="embl">
-        <p>Hãy sử dụng các chữ cái dưới đây để đoán từ</p>
-        <img src="" alt="">
+      <h1>Đoán từ</h1> <img src="./../../../assets/img/embl/study.png" alt="Hangman Study" class="embl">
+      <p>Hãy sử dụng các chữ cái dưới đây để đoán từ</p>
+      <img src="" alt="">
+    </div>
+    <div class="wrapper">
+      <div id="buttons">
       </div>
-      <div class="wrapper">
-        <div id="buttons">
-        </div>
-        <p id="catagoryName"></p>
-        <div id="hold">
-        </div>
-        <p id="mylives"></p>
-        <canvas id="stickman">Văn bản này sẽ hiển thị nếu trình duyệt không hỗ trợ HTML5 Canvas tag</canvas>
-        <div class="container">
-          <button id="reset">Chơi lại</button>
-        </div>
+      <p id="catagoryName"></p>
+      <div id="hold">
       </div>
-      <script src="./js/game.js"></script>
-   </div>
-</section>
+      <p id="mylives"></p>
+      <canvas id="stickman">Văn bản này sẽ hiển thị nếu trình duyệt không hỗ trợ HTML5 Canvas tag</canvas>
+      <div class="container">
+        <button id="reset">Chơi lại</button>
+      </div>
+    </div>
+    <script src="./js/game.js"></script>
+    </div>
+  </section>
 </body>
+
 </html>
