--- a/vi/stuff/games/quiz/declension/index.html
+++ b/vi/stuff/games/quiz/declension/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet">
-    <link rel="stylesheet" href="./../../../../assets/style/css/style.css">
+    <link rel="stylesheet" href="./../../../../../assets/style/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
