--- a/vi/about.html
+++ b/vi/about.html
@@ -64,14 +64,13 @@
                     <div class="container about">
                         <div class="introduce">
                             <p>Xin chào, <br>
-                                Chúng tôi là SARO.</p>
-                            <p>Chúng tôi là SARO. Với khát khao và mong muốn giúp đỡ người nước ngoài học tiếng Ba Lan
-                                cách dễ dàng hơn, chúng tôi quyết định thành lập dự án SARO.
-                                Ngôn ngữ chính của chúng tôi là Tiếng Anh. Tuy nhiên, chúng thôi cũng thêm số ngôn ngữ
-                                khác như tiếng Nhật và tiếng Hàn, tiếng Việt.
-                                Tên gọi SARO được bắt nguồn từ cái tên "Saki" trong tiếng Nhật 沙季 và "Robert" trong
-                                tiếng Ba Lan. Saki và Robert là cặp đôi Nhật - Ba Lan với mong muốn được chia sẻ kiến
-                                thức của mình đến với mọi người xung quanh...
+                                Chúng tôi là SARO. <br>
+                                Với khát khao và mong muốn giúp đỡ người nước ngoài học tiếng Ba Lan một cách dễ dàng
+                                hơn, chúng tôi quyết định thành lập dự án SARO. Ngôn ngữ chính của chúng tôi là Tiếng
+                                Anh. Tuy nhiên, chúng tôi cũng thêm số ngôn ngữ khác như tiếng Nhật, tiếng Hàn và tiếng
+                                Việt. Tên gọi SARO được bắt nguồn từ cái tên "Saki" trong tiếng Nhật 沙季 và "Robert"
+                                trong tiếng Ba Lan. Saki và Robert là cặp đôi Nhật - Ba Lan với mong muốn được chia sẻ
+                                kiến thức của mình đến với mọi người xung quanh...
                             </p>
                         </div>
                         <div id="root" lang="vi"></div>
