--- a/vi/stuff/games/hangman/index.html
+++ b/vi/stuff/games/hangman/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../../../assets/style/css/style.css">
+  <link rel="stylesheet" href="./style.css">
   <link
     href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
@@ -23,7 +23,7 @@
   </script>
   <section>
     <div class="wrapper">
-      <h1>Đoán từ</h1> <img src="./../../../assets/img/embl/study.png" alt="Hangman Study" class="embl">
+      <h1>Đoán từ</h1> <img src="./../../../../assets/img/embl/study.png" alt="Hangman Study" class="embl">
       <p>Hãy sử dụng các chữ cái dưới đây để đoán từ</p>
       <img src="" alt="">
     </div>
@@ -39,7 +39,7 @@
         <button id="reset">Chơi lại</button>
       </div>
     </div>
-    <script src="./js/game.js"></script>
+    <script src="./game.js"></script>
     </div>
   </section>
 </body>
