--- a/vi/test/unit0/index.html
+++ b/vi/test/unit0/index.html
@@ -43,7 +43,8 @@
             </div>
         </div>
     </section>
-    <script type="module" src="../../../../assets/js/testUnit0.js"></script>
+    <script src="./../../../assets/js/data/components/onClickPlay.js"></script>
+    <script type="module" src="./../../../assets/js/testUnit0.js"></script>
 </body>
 
 </html>
