fixed vietnamese contact page

--- a/vi/contact.html
+++ b/vi/contact.html
@@ -77,13 +77,13 @@
                             <h2>Form liên hệ</h2>
                             <form method="post">
                                 <input type="text" name="language" id="language" value="en" style="display: none;">
-                                <input type="text" name="name" id="name" class="form-control"
-                                    placeholder=" Enter here your name..." required>
+                                <input type="text" name="name" id="name" class="form-control" placeholder=" Tên..."
+                                    required>
                                 <p id="nameValid"></p>
-                                <input type="email" name="email" id="email" class="form-control"
-                                    placeholder=" Enter your e-mail here.." required>
+                                <input type="email" name="email" id="email" class="form-control" placeholder=" E-mail.."
+                                    required>
                                 <p id="emailValid"></p>
-                                <textarea name="message" id="message" placeholder=" Enter your message here..." row="10"
+                                <textarea name="message" id="message" placeholder=" Tin nhắn..." row="10"
                                     required></textarea>
                                 <p id="msgValid"></p>
                                 <div class="g-recaptcha" data-sitekey="6LePq8oZAAAAADzsXuOoCMldDwNQAVSSZPkOCebE"></div>
