contact wrong lang

--- a/vi/contact.html
+++ b/vi/contact.html
@@ -76,7 +76,7 @@
                         <div class="contact__box">
                             <h2>Form liên hệ</h2>
                             <form method="post">
-                                <input type="text" name="language" id="language" value="en" style="display: none;">
+                                <input type="text" name="language" id="language" value="vi" style="display: none;">
                                 <input type="text" name="name" id="name" class="form-control" placeholder=" Tên..."
                                     required>
                                 <p id="nameValid"></p>
